<resources>
    <string name="app_name">ActivityLifecycleDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_b">BActivity</string>
    <string name="title_activity_c">CActivity</string>

    <string name="activity_a_title">Activity A</string>
    <string name="activity_a_button_1">Start B</string>
    <string name="activity_a_button_2">Start C</string>
    <string name="activity_a_button_3">Finish A</string>

    <string name="activity_b_title">Activity B</string>
    <string name="activity_b_button_1">Start A</string>
    <string name="activity_b_button_2">Start C</string>
    <string name="activity_b_button_3">Finish B</string>

    <string name="activity_c_title">Activity C</string>
    <string name="activity_c_button_1">Start A</string>
    <string name="activity_c_button_2">Start B</string>
    <string name="activity_c_button_3">Finish C</string>

    <string name="activity_button_4">Dialog</string>
    <string name="lifecycle_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>

    <string name="dialog_button">OK</string>

    <string name="onCreate">onCreate</string>
    <string name="onStart">onStart</string>
    <string name="onResume">onResume</string>
    <string name="onPause">onPause</string>
    <string name="onStop">onStop</string>
    <string name="onDestroy">onDestroy</string>
    <string name="onRestart">onRestart</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dialog">DialogActivity</string>

</resources>
