<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AActivity"
    android:background="@color/blue">

    <TextView
        android:text="@string/activity_a_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/activity_a_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startActivityB"/>

        <Button
            android:text="@string/activity_a_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startActivityC"/>

        <Button
            android:text="@string/activity_a_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="finishActivityA"/>

        <Button
            android:text="@string/activity_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDialog"/>
    </LinearLayout>


    <TextView
        android:text="@string/lifecycle_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/lifecycle_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:text="@string/activity_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"/>

</LinearLayout>
