<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context="com.example.syl.activitylifecycledemo.CActivity">

    <TextView android:text="@string/activity_c_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/activity_c_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startActivityA"/>

        <Button
            android:text="@string/activity_c_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startActivityB"/>

        <Button
            android:text="@string/activity_c_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="finishActivityC"/>

        <Button
            android:text="@string/activity_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startDialog"/>
        </LinearLayout>

    <TextView
        android:text="@string/lifecycle_list"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/lifecycle_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:text="@string/activity_status"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/white"/>

</LinearLayout>
